--- a/style.css
+++ b/style.css
@@ -19,3 +19,15 @@
 .list-students td:nth-last-child(1){
     text-align: right;
 }
+
+nav a{
+    display: inline-block;
+    padding: 5px 10px;
+    text-decoration: none;
+}
+
+a:hover{
+    display: inline-block;
+    padding: 5px 10px;
+    text-decoration: underline;
+}
