--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-*{
+/* *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
+} */
 
 .list-students{
     border-collapse: collapse;
@@ -20,7 +20,7 @@
     text-align: right;
 }
 
-nav a{
+/* nav a{
     display: inline-block;
     padding: 5px 10px;
     text-decoration: none;
@@ -30,7 +30,7 @@ a:hover{
     display: inline-block;
     padding: 5px 10p;
     text-decoration: underline;
-}
+} */
 
 .class-list{
     display: flex;
@@ -67,4 +67,28 @@ nav,pages{
     display: flex;
     justify-content:center;
     width:800px;
+}
+@keyframes fade{
+    0%{
+        height:0rem;
+    }
+    10%{
+        height:3.5rem;
+        opacity:0;
+    }
+    20%{
+        opacity: 1;
+    }
+    70%{
+        height:3.5rem;
+        opacity:1
+    }
+    80%{
+        height:3.5rem;
+        opacity: 0;
+    }
+    100%{
+        height:0;
+    }
+    
 }
